--- a/index.html
+++ b/index.html
@@ -2,221 +2,134 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        /* Блокируем любые изменения размера и скролл */
-        html, body {
+        :root {
+            --bg-color: #000;
+            --card-bg: rgba(255, 255, 255, 0.08);
+            --border-color: rgba(255, 255, 255, 0.12);
+            --text-main: #fff;
+        }
+
+        body {
             margin: 0;
             padding: 0;
-            background-color: #000;
-            color: #fff;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            height: 100vh;
-            width: 100vw;
+            background-color: var(--bg-color);
+            color: var(--text-main);
+            font-family: -apple-system, system-ui, sans-serif;
             overflow: hidden;
-            position: fixed; /* Фикс для ПК и iOS, чтобы окно не растягивалось */
+            -webkit-font-smoothing: antialiased;
         }
 
-        .app-container {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            width: 100%;
-        }
-
-        /* ТВОЙ ДИЗАЙН ПРОФИЛЯ */
         .header-wrapper {
-            padding: 20px;
+            padding: 16px;
         }
 
         .balance-card {
             display: inline-flex;
             align-items: center;
-            background: rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(10px);
-            border-radius: 100px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            overflow: hidden;
-            height: 48px;
+            background: var(--card-bg);
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
+            border-radius: 24px;
+            border: 0.5px solid var(--border-color);
+            height: 44px;
         }
 
         .user-section {
             display: flex;
             align-items: center;
-            padding: 0 14px 0 8px;
-            gap: 10px;
+            padding: 0 12px 0 6px;
+            gap: 8px;
         }
 
         .avatar {
-            width: 34px;
-            height: 34px;
+            width: 32px;
+            height: 32px;
             border-radius: 50%;
-            background: #333;
+            background: #222;
             object-fit: cover;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .username {
-            font-size: 16px;
+            font-size: 15px;
             font-weight: 600;
-            letter-spacing: -0.3px;
+            letter-spacing: -0.2px;
         }
 
-        .full-divider {
+        .divider {
             width: 1px;
             height: 100%;
-            background-color: rgba(255, 255, 255, 0.15);
+            background: var(--border-color);
         }
 
         .stars-section {
             display: flex;
             align-items: center;
-            padding: 0 16px 0 14px;
-            gap: 6px;
+            padding: 0 14px 0 12px;
+            gap: 5px;
         }
 
-        /* БАРАБАННЫЙ СЧЕТЧИК (ODOMETER) */
-        .odometer {
-            display: flex;
-            font-size: 18px;
+        .count {
+            font-size: 17px;
             font-weight: 700;
-            font-family: 'Courier New', Courier, monospace;
+            font-variant-numeric: tabular-nums;
         }
 
-        .digit-container {
-            height: 1.2em;
-            overflow: hidden;
-            line-height: 1.2em;
-        }
-
-        .digit-strip {
-            transition: transform 0.3s cubic-bezier(0, 0, 0.2, 1);
-        }
-
-        /* КНОПКА МАЙНИНГА */
-        .main-content {
-            flex: 1;
+        .star-icon {
             display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .mine-button {
-            background: #fff;
-            color: #000;
-            border: none;
-            padding: 25px 50px;
-            border-radius: 30px;
-            font-size: 20px;
-            font-weight: 900;
-            letter-spacing: 1px;
-            box-shadow: 0 0 40px rgba(255, 255, 255, 0.2);
-            cursor: pointer;
-            transition: transform 0.1s;
-            -webkit-tap-highlight-color: transparent;
-            user-select: none;
-        }
-
-        .mine-button:active {
-            transform: scale(0.92);
+            filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.2));
         }
     </style>
 </head>
 <body>
 
-    <div class="app-container">
-        <div class="header-wrapper">
-            <div class="balance-card">
-                <div class="user-section">
-                    <img id="avatar" class="avatar" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" alt="">
-                    <span id="name" class="username">Загрузка...</span>
-                </div>
-                <div class="full-divider"></div>
-                <div class="stars-section">
-                    <div id="odometer" class="odometer"></div>
-                    <div class="star-svg">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 14 15" fill="none">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.63869 12.1902L3.50621 14.1092C3.18049 14.3087 2.75468 14.2064 2.55515 13.8807C2.45769 13.7216 2.42864 13.5299 2.47457 13.3491L2.95948 11.4405C3.13452 10.7515 3.60599 10.1756 4.24682 9.86791L7.6642 8.22716C7.82352 8.15067 7.89067 7.95951 7.81418 7.80019C7.75223 7.67116 7.61214 7.59896 7.47111 7.62338L3.66713 8.28194C2.89387 8.41581 2.1009 8.20228 1.49941 7.69823L0.297703 6.69116C0.00493565 6.44581 -0.0335059 6.00958 0.211842 5.71682C0.33117 5.57442 0.502766 5.48602 0.687982 5.47153L4.35956 5.18419C4.61895 5.16389 4.845 4.99974 4.94458 4.75937L6.36101 1.3402C6.5072 0.987302 6.91179 0.819734 7.26469 0.965925C7.43413 1.03612 7.56876 1.17075 7.63896 1.3402L9.05539 4.75937C9.15496 4.99974 9.38101 5.16389 9.6404 5.18419L13.3322 5.47311C13.713 5.50291 13.9975 5.83578 13.9677 6.2166C13.9534 6.39979 13.8667 6.56975 13.7269 6.68896L10.9114 9.08928C10.7131 9.25826 10.6267 9.52425 10.6876 9.77748L11.5532 13.3733C11.6426 13.7447 11.414 14.1182 11.0427 14.2076C10.8642 14.2506 10.676 14.2208 10.5195 14.1249L7.36128 12.1902C7.13956 12.0544 6.8604 12.0544 6.63869 12.1902Z" fill="white"/>
-                        </svg>
-                    </div>
+    <div class="header-wrapper">
+        <div class="balance-card">
+            <div class="user-section">
+                <img id="avatar" class="avatar" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="">
+                <span id="name" class="username">Guest</span>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="stars-section">
+                <span id="stars-val" class="count">0</span>
+                <div class="star-icon">
+                    <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.63869 12.1902L3.50621 14.1092C3.18049 14.3087 2.75468 14.2064 2.55515 13.8807C2.45769 13.7216 2.42864 13.5299 2.47457 13.3491L2.95948 11.4405C3.13452 10.7515 3.60599 10.1756 4.24682 9.86791L7.6642 8.22716C7.82352 8.15067 7.89067 7.95951 7.81418 7.80019C7.75223 7.67116 7.61214 7.59896 7.47111 7.62338L3.66713 8.28194C2.89387 8.41581 2.1009 8.20228 1.49941 7.69823L0.297703 6.69116C0.00493565 6.44581 -0.0335059 6.00958 0.211842 5.71682C0.33117 5.57442 0.502766 5.48602 0.687982 5.47153L4.35956 5.18419C4.61895 5.16389 4.845 4.99974 4.94458 4.75937L6.36101 1.3402C6.5072 0.987302 6.91179 0.819734 7.26469 0.965925C7.43413 1.03612 7.56876 1.17075 7.63896 1.3402L9.05539 4.75937C9.15496 4.99974 9.38101 5.16389 9.6404 5.18419L13.3322 5.47311C13.713 5.50291 13.9975 5.83578 13.9677 6.2166C13.9534 6.39979 13.8667 6.56975 13.7269 6.68896L10.9114 9.08928C10.7131 9.25826 10.6267 9.52425 10.6876 9.77748L11.5532 13.3733C11.6426 13.7447 11.414 14.1182 11.0427 14.2076C10.8642 14.2506 10.676 14.2208 10.5195 14.1249L7.36128 12.1902C7.13956 12.0544 6.8604 12.0544 6.63869 12.1902Z" fill="white"/>
+                    </svg>
                 </div>
             </div>
-        </div>
-
-        <div class="main-content">
-            <button class="mine-button" onclick="mine()">МАЙНИТЬ ЗВЕЗДЫ</button>
         </div>
     </div>
 
     <script>
-        const tg = window.Telegram.WebApp;
-        tg.expand();
-        tg.disableVerticalSwipe(); // Запрещаем закрытие свайпом
-        tg.backgroundColor = '#000000';
-        tg.headerColor = '#000000';
+        (function() {
+            const tg = window.Telegram.WebApp;
+            const ui = {
+                name: document.getElementById('name'),
+                avatar: document.getElementById('avatar'),
+                stars: document.getElementById('stars-val')
+            };
 
-        let StarsCount = 0.000000;
+            tg.expand();
+            tg.headerColor = '#000000';
+            tg.backgroundColor = '#000000';
 
-        // --- ЛОГИКА БАРАБАНА ---
-        function initOdometer() {
-            const container = document.getElementById('odometer');
-            const str = StarsCount.toFixed(6);
-            container.innerHTML = '';
-
-            [...str].forEach((char) => {
-                const wrap = document.createElement('div');
-                wrap.className = 'digit-container';
-                if (char === '.') {
-                    wrap.innerText = '.';
-                } else {
-                    const strip = document.createElement('div');
-                    strip.className = 'digit-strip';
-                    for (let i = 0; i <= 9; i++) {
-                        const d = document.createElement('div');
-                        d.innerText = i;
-                        strip.appendChild(d);
-                    }
-                    wrap.appendChild(strip);
-                }
-                container.appendChild(wrap);
-            });
-            updateOdometer();
-        }
-
-        function updateOdometer() {
-            const str = StarsCount.toFixed(6);
-            const strips = document.querySelectorAll('.digit-strip');
-            let stripIdx = 0;
-
-            [...str].forEach((char) => {
-                if (char !== '.') {
-                    const y = char * 1.2;
-                    strips[stripIdx].style.transform = `translateY(-${y}em)`;
-                    stripIdx++;
-                }
-            });
-        }
-
-        function mine() {
-            StarsCount += 0.000001;
-            updateOdometer();
+            const user = tg.initDataUnsafe?.user;
             
-            if (tg.HapticFeedback) {
-                tg.HapticFeedback.impactOccurred('medium');
+            if (user) {
+                ui.name.textContent = user.first_name || 'User';
+                if (user.photo_url) ui.avatar.src = user.photo_url;
             }
-        }
 
-        // Данные ТГ
-        const user = tg.initDataUnsafe?.user;
-        if (user) {
-            document.getElementById('name').textContent = user.first_name;
-            if (user.photo_url) document.getElementById('avatar').src = user.photo_url;
-        } else {
-            document.getElementById('name').textContent = "Developer";
-        }
-
-        initOdometer();
+            // Инициализация баланса
+            let currentStars = 0;
+            ui.stars.textContent = currentStars;
+        })();
     </script>
 </body>
 </html>
